# intellij-bazel-srcjar

./: .gitignore  WORKSPACE
issue/: BUILD.bazel  Usage.scala  rule.bzl
